feat: 实现国际化消息热重载功能并优化资源加载逻辑